--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <html>
     <head>
-        <title>Hello world</title>
+        <head>
+            <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+            <title></title>
+            </head>
+        <title>น้อนหมบกับน้อนเเต่ว</title>
     </head>
     <body>
-        <h1>Hello everyone</h1>
-        <p>its me</p>
-        <img src="cat2.jpg">
-        <img src = "dog.jpg" style="width:100px;height:100px;">
+        <h1 align="center">Hello everyone</h1>
+        <p align="center">ชื่อ นายอินทนนท์ แต่งตั้ง ชื่อเล่น ภู</p>
+        <img src="cat.jpg"style ="width:300px;height:300px;">
+        <img src = "หมบ.jpg" style="width:300px;height:300px;">
         <br>
-        <a href="http://www.it.kmitl.ac.th">ITMKITL</a>
+        <a align="center" href="https://shopee.co.th/">Shopee</a>
 
-        <h2>เรื่งตลก</h2>
-        <ul>
-            <li>Google</li>
-            <li>Yahoo</li>
-            <li>Amazon</li>
-        </ul>
+        <h2 align="center">เรื่งตลก</h2>
+        <p align="center">ชายคนหนึ่งถือเต่าเดินเข้าไปในร้านเหล้า
+            เจ้าเต่าถูกมัดขาด้วยเชือก
+            กระดองก็ถูกพันไว้แน่นหนา ด้วยเทป
+            "ทำไมต้องมัดเต่าไว้แบบนี้" เจ้าของร้านถาม</p>
+        <p align="center">"เต่านี่มันเร็วมากเลยต้องมัดไว้ ถ้าไม่เชื่อลองมาพนันกันก็ได้
+            ให้คุณไปยืนที่ผนังนั่นแล้วลองเรียก หมามาดู
+            ผมว่าหมาคุณไปถึงผนังนั่นทีหลังเต่าผม" เจ้าของเต่าท้าพนัน
+            เจ้าของร้านตกลงรับพนันเป็นเงิน 5,000 บาท</p>
+        <p align="center">เขาเดินไปที่ผนังแล้วก็ร้องเรียกหมาของเขา
+            ทันใดนั้นเจ้าของเต่าก็ขว้างเต่าลอยละลิ่วกระแทกผนังดังโครม
+            "เห็นมั๊ย ผมบอกแล้วว่าเต่าผมเร็วกว่าหมาของคุณ"</p>
     </body>
 </html>
