--- a/form.html
+++ b/form.html
@@ -30,10 +30,10 @@
             <textarea rows="10" cols="40" name = "comment" id="idComment" placeholder=" Enter Comment"></textarea>
           </div>
         </div>
-        <div  class="form-group">
+        <div class="form-group">
             <label for="link" class="col-sm-3 control-label">Your Link</label>
             <div class="col-sm-6">
-                <input type="text" link="link" id="idname" class="form-control" placeholder="Enter Link">
+                <input type="text" name = "link" id="idLink" class="form-control" placeholder="Enter Link">
             </div>
         </div>
 
