--- a/form.html
+++ b/form.html
@@ -18,10 +18,7 @@
       <form action = "insert.php" method = "post" id="CommentForm" class="form-horizontal mt-5">
         <div class="display-3 text-center mb-3">Type Your Information</div>
         <div class="form-group">
-          <label for="name" class="col-sm-3 control-label">Your Name</label>
-          <div class="col-sm-6">
-            <input type="text" name="name" id="idname" class="form-control" placeholder="Enter Name">
-          </div>
+            <input type="text" name = "name" id="idName" placeholder="Enter Name"> <br>
         </div>
 
         <div class="form-group">
@@ -30,13 +27,10 @@
             <textarea rows="10" cols="40" name = "comment" id="idComment" placeholder=" Enter Comment"></textarea>
           </div>
         </div>
+        
         <div class="form-group">
-            <label for="link" class="col-sm-3 control-label">Your Link</label>
-            <div class="col-sm-6">
-                <input type="text" name = "link" id="idLink" class="form-control" placeholder="Enter Link">
-            </div>
+            <input type="text" name = "link" id="idLink" placeholder="Enter Link"> <br><br>
         </div>
-
         <div class="form-group">
           <div class="col-md-12 mt-3">
             <input type="submit" name="addbtn" id="idaddbtn" class="btn btn-success" value="SUBMIT">
