--- a/form.html
+++ b/form.html
@@ -17,6 +17,7 @@
     <div class="container">
       <form action = "insert.php" method = "post" id="CommentForm" class="form-horizontal mt-5">
         <div class="display-3 text-center mb-3">Type Your Information</div>
+        <label for="name" class="col-sm-3 control-label">Your Name</label>
         <div class="form-group">
             <input type="text" name = "name" id="idName" placeholder="Enter Name"> <br>
         </div>
@@ -29,7 +30,8 @@
         </div>
         
         <div class="form-group">
-            <input type="text" name = "link" id="idLink" placeholder="Enter Link"> <br><br>
+          <label for="link" class="col-sm-3 control-label">Your Link</label>
+          <input type="text" name = "link" id="idLink" placeholder="Enter Link"> <br><br>
         </div>
         <div class="form-group">
           <div class="col-md-12 mt-3">
