--- a/form.html
+++ b/form.html
@@ -19,7 +19,7 @@
         <div class="display-3 text-center mb-3">Type Your Information</div>
         <label for="name" class="col-sm-3 control-label">Your Name</label>
         <div class="form-group">
-            <input type="text" name = "name" id="idName" placeholder="Enter Name"> <br>
+            <input type="text" name = "name" id="idName" placeholder="Your Name"> <br>
         </div>
 
         <div class="form-group">
@@ -29,9 +29,9 @@
           </div>
         </div>
         
+        <label for="name" class="col-sm-3 control-label">Your Name</label>
         <div class="form-group">
-          <label for="link" class="col-sm-3 control-label">Your Link</label>
-          <input type="text" name = "link" id="idLink" placeholder="Enter Link"> <br><br>
+            <input type="text" name = "link" id="idLink" placeholder="Your Link"> <br>
         </div>
         <div class="form-group">
           <div class="col-md-12 mt-3">
