--- a/form.html
+++ b/form.html
@@ -17,9 +17,8 @@
     <div class="container">
       <form action = "insert.php" method = "post" id="CommentForm" class="form-horizontal mt-5">
         <div class="display-3 text-center mb-3">Type Your Information</div>
-        <label for="name" class="col-sm-3 control-label">Your Name</label>
         <div class="form-group">
-            <input type="text" name = "name" id="idName" placeholder="Your Name"> <br>
+            <input type="text" name = "name" id="idName" placeholder="Enter Name"> <br>
         </div>
 
         <div class="form-group">
@@ -29,9 +28,8 @@
           </div>
         </div>
         
-        <label for="name" class="col-sm-3 control-label">Your Name</label>
         <div class="form-group">
-            <input type="text" name = "link" id="idLink" placeholder="Your Link"> <br>
+            <input type="text" name = "link" id="idLink" placeholder="Enter Link"> <br><br>
         </div>
         <div class="form-group">
           <div class="col-md-12 mt-3">
