--- a/form.html
+++ b/form.html
@@ -1,44 +1,41 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Adding information</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.21/js/jquery.dataTables.min.js"></script> <!-- Datatable -->
-    <script src='https://kit.fontawesome.com/a076d05399.js'></script> <!-- Edit Icon -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  </head>
-  <body>
-    <div class="container">
-      <form action = "insert.php" method = "post" id="CommentForm" class="form-horizontal mt-5">
-        <div class="display-3 text-center mb-3">Type Your Information</div>
-        <div class="form-group">
-            <input type="text" name = "name" id="idName" placeholder="Enter Name"> <br>
-        </div>
+<html lang="en">
+<head>
+  <title>Form add information</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<style>
+body {
+background-color: lightblue;
+}
+</style>
+</head>
+<body>
 
-        <div class="form-group">
-          <label for="comment" class="col-sm-3 control-label">Your Comment</label>
-          <div class="col-sm-6">
-            <textarea rows="10" cols="40" name = "comment" id="idComment" placeholder=" Enter Comment"></textarea>
-          </div>
-        </div>
-        
-        <div class="form-group">
-            <input type="text" name = "link" id="idLink" placeholder="Enter Link"> <br><br>
-        </div>
-        <div class="form-group">
-          <div class="col-md-12 mt-3">
-            <input type="submit" name="addbtn" id="idaddbtn" class="btn btn-success" value="SUBMIT">
-            <a href="index.php" class="btn btn-danger">CANCLE</a>
-          </div>
-        </div>
-
-      </form>
+<div class="container">
+    <img src="img/banner/banner1.jpg" class="img-fluid" style="width:100%;max-width:1600px"/>
+  <h2 style="color:blue">Add Your Information</h2>
+  <form action = "insert.php" method = "post" id="CommentForm" >
+    <div class="form-group" style="color:blue">
+      <label for="name">Name:</label>
+      <input type="text" class="form-control" id="CommentForm" placeholder="Enter Name" name="name">
     </div>
-  </body>
+    <div class="form-group" style="color:blue">
+      <label for="link">Link:</label>
+      <input type="text" name = "link" id="idLink" class="form-control" placeholder="Enter Link">
+    </div>
+    <div style="color:blue">Comment:</div><br>
+    <textarea rows="10" cols="150" name = "comment" id="idComment" class="form-control" placeholder="Enter Comment"></textarea><br>  
+    <center><a href="show.php"><input type="button" class="btn btn-primary" value="Back"></a>&nbsp;<input type="submit" id="commentBtn" value="Summit" class="btn btn-success"></center>
+  </form>
+    <br>
+    <br>
+  </form>
+</div>
+
+</body>
 </html>
