--- a/form.html
+++ b/form.html
@@ -17,8 +17,8 @@ background-color:  rgb(255, 201, 140);
 <body>
 
 <div class="container">
-    <img src="img/banner/banner7.jpg" class="img-fluid" style="width:100%;max-width:1600px"/>
-  <h2 style="color:blue">Add Your Information</h2>
+    <img src="img/banner/banner3.jpg" class="img-fluid" style="width:100%;max-width:1600px"/>
+  <h2 style="color:black">Add Your Information</h2>
   <form action = "insert.php" method = "post" id="CommentForm" >
     <div class="form-group" style="color:black">
       <label for="name">Name:</label>
