--- a/form.html
+++ b/form.html
@@ -17,18 +17,18 @@ background-color:  rgb(255, 201, 140);
 <body>
 
 <div class="container">
-    <img src="img/banner/banner3.jpg" class="img-fluid" style="width:100%;max-width:1600px"/>
-  <h2 style="color:black">Add Your Information</h2>
+    <img src="img/banner/banner6.jpg" class="img-fluid" style="width:100%;max-width:1600px"/>
+  <h2 style="color:black">Type Your Information</h2>
   <form action = "insert.php" method = "post" id="CommentForm" >
     <div class="form-group" style="color:black">
-      <label for="name">Name:</label>
+      <label for="name">Your Name:</label>
       <input type="text" class="form-control" id="CommentForm" placeholder="Enter Name" name="name">
     </div>
     <div class="form-group" style="color:black">
-      <label for="link">Link:</label>
+      <label for="link">Your Link:</label>
       <input type="text" name = "link" id="idLink" class="form-control" placeholder="Enter Link">
     </div>
-    <div style="color:black">Comment:</div><br>
+    <div style="color:black">Your Comment:</div><br>
     <textarea rows="10" cols="150" name = "comment" id="idComment" class="form-control" placeholder="Enter Comment"></textarea><br>  
     <center><a href="show.php"><input type="button" class="btn btn-primary" value="Back"></a>&nbsp;<input type="submit" id="commentBtn" value="Summit" class="btn btn-success"></center>
   </form>
