--- a/form_delete.html
+++ b/form_delete.html
@@ -13,13 +13,13 @@
       margin-top: 25px;
     }
     body {
-  background-color: rgba(172, 207, 246, 1);
+  background-color: rgba(255, 169, 169);
 }
   </style>
 </head>
 <body>
   <div class="container">
-    <div class="form" style="color:blue">
+    <div class="form" style="color:black">
       <p class="ex1"><h1><center>Delete</center></h1></p>
     <p>Name:</p>
     </div>
