--- a/form_delete.html
+++ b/form_delete.html
@@ -19,8 +19,9 @@
 </head>
 <body>
   <div class="container">
+    <img src="img/banner/banner3.jpg" class="img-fluid" style="width:100%;max-width:1600px"/>
     <div class="form" style="color:black">
-      <p class="ex1"><h1><center>Delete</center></h1></p>
+      <p class="ex1"><h1><center>Type Name To Delete</center></h1></p>
     <p>Name:</p>
     </div>
   <form action = "delete.php" method = "post" id="CommentForm">
