--- a/form_edit.html
+++ b/form_edit.html
@@ -18,6 +18,7 @@
   </style>
 </head>
   <div class="container">
+    <img src="img/banner/banner.jpg" class="img-fluid" style="width:100%;max-width:1600px"/>
     <div class="form" style="color:white">
       <p class="ex1"><h1><center>Edit</center></h1></p>
     <p>Name:</p>
