--- a/form_edit.html
+++ b/form_edit.html
@@ -13,19 +13,18 @@
       margin-top: 25px;
     }
     body {
-  background-color: rgba(221, 212, 253);
+  background-color: rgba(172, 207, 246, 1);
 }
   </style>
 </head>
   <div class="container">
-    <img src="img/banner/banner.jpg" class="img-fluid" style="width:100%;max-width:1600px"/>
-    <div class="form" style="color:white">
+    <div class="form" style="color:blue">
       <p class="ex1"><h1><center>Edit</center></h1></p>
     <p>Name:</p>
     </div>
   <form action = "edit.php" method = "post" id="CommentForm" >
     <center><input type="text" class="form-control" name = "name" id="idName" placeholder="Enter Name"></center><br>
-    <div style="color:white">Edit Comment:</div><br>
+    <div style="color:blue">Edit Comment:</div><br>
     <center><textarea rows="10" cols="20" class="form-control" name = "comment" id="idComment" placeholder="Enter New Comment" ></textarea></center><br>
     <center><a href="show.php"><input type="button" class="btn btn-primary" value="Back"></a>&nbsp;&nbsp;&nbsp;&nbsp;<input type="submit" id="commentBtn" value="Summit" class="btn btn-success"></center>
   </form>
